[package]
name = "amethyst_nphysics"
version = "0.2.0"
authors = ["Andrea Catania <info@andreacatania.com>"]
edition = "2018"
repository = "https://github.com/AndreaCatania/amethyst_nphysics"
description = "The NPhysics backend for the `amethyst_physics` crate."
keywords = ["physics", "nphysics", "dynamics", "3D", "amethyst"]
categories = ["science", "game-engines", "simulation", "games"]
readme = "README.md"
license = "MIT"

[dependencies]
amethyst_core = "0.10.0"
amethyst_physics = "0.2.0"
log = "0.4.6"
ncollide3d = "0.21.0"
nphysics3d = "0.13.0"
generational-arena = "0.2.3"
alga = { version = "0.9.0", default-features = false }